// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content matches snapshot 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "<b>Content with HTML</b>",
    }
  }
/>
`;

exports[`Content renders with a custom renderer if set 1`] = `
<div
  className="custom-renderer"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<b>Content with HTML</b>",
    }
  }
/>
`;
